changed some setting so the web package runs again.
Also started adding the jetty plugin so we can run on jetty as well if we would like.
Right now the jetty plugin fails though due to the startup not loading the SQL connection right.